--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,7 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Expires" content="-1" />
-        <title>Straumur - Merchant Portal</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
-        <% if (process.env.NODE_ENV === 'production') { %>
-        <!-- Hotjar Tracking Code  -->
-        <script>
-            (function (h, o, t, j, a, r) {
-                h.hj =
-                    h.hj ||
-                    function () {
-                        (h.hj.q = h.hj.q || []).push(arguments);
-                    };
-                h._hjSettings = { hjid: 3376263, hjsv: 6 };
-                a = o.getElementsByTagName("head")[0];
-                r = o.createElement("script");
-                r.async = 1;
-                r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-                a.appendChild(r);
-            })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-        </script>
-        <% } %>
+        <title>React Web Portal</title>
 
         <script src="/scripts/appconfig.js"></script>
     </head>
